# digtaltiwn

./: .env  CONFIG_GUIDE.md  MODULE_USAGE.md  PIPELINE_USAGE.md  auto_mining_results_final.csv  auto_mining_results_partial.csv  docker-compose.yml  experimental_data_cu_ni.csv  pipeline_results_20251226_112801.csv  pipeline_results_20251229_132400.csv  pyproject.toml  requirements.txt  run_auto_miner.py  run_md.py  run_pipeline.py  run_stability.py  run_ternary_pipeline.py  run_test.py  test_config.py  test_mixer.py  validation_report_20251229_154404.csv  validation_report_20251229_164903.csv  validation_report_20251229_164936.csv  verify_db.py
data/final_results/: experimental_references_20251229_153111.csv  experimental_references_20251229_154024.csv  experimental_references_20251229_163546.csv  experimental_references_20251229_164936.csv
data/results/: md_Cu11Ni16_1000K.traj  md_Cu11Ni43_1000K.traj  md_Cu11Ni7_1000K.traj  md_Cu205Ni51_1000K.traj  md_Cu231Ni25_1000K.traj  md_Cu23Ni85_1000K.traj  md_Cu25Ni2_1000K.traj  md_Cu45Ni19_1000K.traj  md_Cu77Ni51_1000K.traj  md_CuNi2_1000K.traj  md_CuNi3_1000K.traj  md_CuNi5_1000K.traj  md_CuNi_1000K.traj  md_Cu_1000K.traj  md_Ni_1000K.traj  md_Os_1000K.traj  md_Re115Os13_1000K.traj  md_Re153Os103_1000K.traj  md_Re179Os77_1000K.traj  md_Re19Os45_1000K.traj  md_Re25Os231_1000K.traj  md_Re51Os13_1000K.traj  md_Re51Os205_1000K.traj  md_Re51Os77_1000K.traj  md_ReOs_1000K.traj  md_Re_1000K.traj  relax_Cr.traj  relax_Cr115Fe13.traj  relax_Cu.traj  (+51 more)
tarj/: extract_frames.py  show_traj_info.py  view_trajectory.py  view_trajectory_gui.py
(+27 files in other folders)
